--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,6 +5,7 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
